--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,7 @@ endif()
 
 
 
-install(TARGETS helloworld_cli RUNTIME DESTINATION bin)
+install(TARGETS IPFilter_cli RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
 
