--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ configure_file(version.h.in version.h)
 
 add_executable(IPFilter_cli main.cpp)
 add_library(IPFilter lib.cpp)
-add_executable(test_version test_version.cpp)
+#add_executable(test_version test_version.cpp)
 
 set_target_properties(IPFilter_cli IPFilter test_version PROPERTIES
     CXX_STANDARD 14
@@ -17,18 +17,18 @@ set_target_properties(IPFilter_cli IPFilter test_version PROPERTIES
 target_include_directories(IPFilter
     PRIVATE "${CMAKE_BINARY_DIR}"
 )
-set_target_properties(test_version PROPERTIES
-    COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
-    INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
-)
+#set_target_properties(test_version PROPERTIES
+#    COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
+#    INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
+#)
 
 target_link_libraries(IPFilter_cli PRIVATE
     IPFilter
 )
-target_link_libraries(test_version
-    ${Boost_LIBRARIES}
-    IPFilter
-)
+#target_link_libraries(test_version
+#    ${Boost_LIBRARIES}
+#    IPFilter
+#)
 
 if (MSVC)
     target_compile_options(IPFilter_cli PRIVATE
@@ -37,9 +37,9 @@ if (MSVC)
     target_compile_options(IPFilter PRIVATE
         /W4
     )
-    target_compile_options(test_version PRIVATE
-        /W4
-    )
+#    target_compile_options(test_version PRIVATE
+#        /W4
+#    )
 else ()
     target_compile_options(IPFilter_cli PRIVATE
         -Wall -Wextra -pedantic -Werror
@@ -47,9 +47,9 @@ else ()
     target_compile_options(IPFilter PRIVATE
         -Wall -Wextra -pedantic -Werror
     )
-    target_compile_options(test_version PRIVATE
-        -Wall -Wextra -pedantic -Werror
-    )
+#    target_compile_options(test_version PRIVATE
+#        -Wall -Wextra -pedantic -Werror
+#    )
 endif()
 
 
@@ -68,4 +68,4 @@ include(CPack)
 
 enable_testing()
 
-add_test(test_version test_version)
+#add_test(test_version test_version)
