--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,58 +2,18 @@ cmake_minimum_required(VERSION 3.2)
 
 project(IPFilter VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
 
-find_package(Boost COMPONENTS unit_test_framework REQUIRED)
+find_package(version.h)
 
-configure_file(version.h.in version.h)
+add_executable(IPFilter main.cpp)
 
-add_executable(IPFilter_cli main.cpp)
-#add_executable(test_version test_version.cpp)
-
-set_target_properties(IPFilter_cli IPFilter PROPERTIES
+set_target_properties(IPFilter PROPERTIES
     CXX_STANDARD 14
     CXX_STANDARD_REQUIRED ON
 )
 target_include_directories(IPFilter
     PRIVATE "${CMAKE_BINARY_DIR}"
 )
-#set_target_properties(test_version PROPERTIES
-#    COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
-#    INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
-#)
-
-target_link_libraries(IPFilter_cli PRIVATE
-    IPFilter
-)
-#target_link_libraries(test_version
-#    ${Boost_LIBRARIES}
-#    IPFilter
-#)
-
-if (MSVC)
-    target_compile_options(IPFilter_cli PRIVATE
-        /W4
-    )
-    target_compile_options(IPFilter PRIVATE
-        /W4
-    )
-#    target_compile_options(test_version PRIVATE
-#        /W4
-#    )
-else ()
-    target_compile_options(IPFilter_cli PRIVATE
-        -Wall -Wextra -pedantic -Werror
-    )
-#    target_compile_options(IPFilter PRIVATE
-#        -Wall -Wextra -pedantic -Werror
-#    )
-#    target_compile_options(test_version PRIVATE
-#        -Wall -Wextra -pedantic -Werror
-#    )
-endif()
-
-
-
-install(TARGETS IPFilter_cli RUNTIME DESTINATION bin)
+install(TARGETS IPFilter RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
 
@@ -61,10 +21,4 @@ set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
 set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
 set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 
-set(CPACK_PACKAGE_CONTACT example@example.com)
-
 include(CPack)
-
-enable_testing()
-
-#add_test(test_version test_version)
