--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,18 +2,34 @@ cmake_minimum_required(VERSION 3.2)
 
 project(IPFilter VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER})
 
-find_package(version.h)
+find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 
-add_executable(IPFilter main.cpp)
+configure_file(version.h.in version.h)
 
-set_target_properties(IPFilter PROPERTIES
+add_executable(IPFilter_cli main.cpp)
+add_library(IPFilter lib.cpp)
+add_executable(test_version test_version.cpp)
+
+set_target_properties(IPFilter_cli IPFilter test_version PROPERTIES
     CXX_STANDARD 14
     CXX_STANDARD_REQUIRED ON
 )
 target_include_directories(IPFilter
     PRIVATE "${CMAKE_BINARY_DIR}"
 )
-install(TARGETS IPFilter RUNTIME DESTINATION bin)
+set_target_properties(test_version PROPERTIES
+    COMPILE_DEFINITIONS BOOST_TEST_DYN_LINK
+    INCLUDE_DIRECTORIES ${Boost_INCLUDE_DIR}
+)
+target_link_libraries(IPFilter_cli PRIVATE
+IPFilter
+)
+target_link_libraries(test_version
+${Boost_LIBRARIES}
+IPFilter
+)
+
+install(TARGETS IPFilter_cli RUNTIME DESTINATION bin)
 
 set(CPACK_GENERATOR DEB)
 
@@ -22,3 +38,7 @@ set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
 set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
 
 include(CPack)
+
+enable_testing()
+
+add_test(test_version test_version)
